--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # firebase_core: ^0.4.4
   # cloud_firestore: ^0.13.5
   firebase_database: ^3.0.7
+  flutter_sticky_header: ^0.4.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
