--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   # cloud_firestore: ^0.13.5
   firebase_database: ^3.0.7
   flutter_sticky_header: ^0.4.2
+  pie_chart: ^3.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
