--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   firebase_database: ^3.0.7
   flutter_sticky_header: ^0.4.2
   pie_chart: ^3.1.1
+  lite_rolling_switch: ^0.1.1
+  font_awesome_flutter: ^8.8.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
